--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,12 @@
 
   "icons": [
     {
+      "src": "maskable.png",
+      "sizes": "196x196",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "logo192.png",
       "sizes": "192x192",
       "type": "image/png"
